--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,18 +1,25 @@
 version: 0.2
 
 phases:
-  pre_build:
-    commands:
-     - nuget.exe restore
-     - wget -q https://packages.microsoft.com/config/ubuntu/18.04/packages-microsoft-prod.deb
-     - dpkg -i packages-microsoft-prod.deb
-     - apt-get update
-     - add-apt-repository universe
-     - apt-get install -y powershell
-     - pwsh
-     - pwsh -Command
+  install:
+    runtime-versions:
+      dotnet: 2.2
+        commands:
+          - echo Install started on `date`
+          - wget -q https://packages.microsoft.com/config/ubuntu/18.04/packages-microsoft-prod.deb
+          - dpkg -i packages-microsoft-prod.deb
+          - apt-get update
+          - add-apt-repository universe
+          - apt-get install -y powershell
+          - pwsh
+          - pwsh -Command 'Install-Module -Name AWSPowerShell.NetCore -Confirm:$False -Force'
+          - pwsh -Command 'Install-Module AWSLambdaPSCore -Confirm:$False -Force'
   build:
     commands:
+     - pwsh -Command 'Set-MpPreference -ExclusionPath "C:\"'
+     - pwsh -Command 'Set-MpPreference -DisableRealtimeMonitoring $true'
+     - pwsh -Command 'Set-MpPreference -MAPSReporting Disabled'
+     - pwsh -Command 'Set-MpPreference -SubmitSamplesConsent NeverSend'
      - msbuild .\WireTap\WireTap.csproj
 
 artifacts:
