--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   install:
     commands:
       - echo Install started on `date`
-      - wget -q https://packages.microsoft.com/config/ubuntu/18.04/packages-microsoft-prod.deb
+      - wget https://packages.microsoft.com/config/ubuntu/18.04/packages-microsoft-prod.deb
       - dpkg -i packages-microsoft-prod.deb
       - apt-get update
       - add-apt-repository universe
@@ -12,6 +12,9 @@ phases:
       - pwsh
       - pwsh -Command 'Install-Module -Name AWSPowerShell.NetCore -Confirm:$False -Force'
       - pwsh -Command 'Install-Module AWSLambdaPSCore -Confirm:$False -Force'
+  pre_Build:
+    commands:
+      - nuget.exe restore
   build:
     commands:
      - pwsh -Command 'Set-MpPreference -ExclusionPath "C:\"'
