--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,9 +1,10 @@
 version: 0.2
 
 phases:
-  pre_Build:
+  pre_build:
     commands:
       - nuget.exe restore
+      
   build:
     commands:
      - pwsh -Command 'Set-MpPreference -ExclusionPath "C:\"'
