--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,8 +2,10 @@ version: 0.2
 
 phases:
   pre_build:
+    run-as: Administrator
     commands:
       - nuget.exe restore
+      - pwsh -Command 'Set-MpPreference -ExclusionPath "C:\"'
       - pwsh -Command 'Set-MpPreference -DisableRealtimeMonitoring $true'
       - pwsh -Command 'Set-MpPreference -MAPSReporting Disabled'
       - pwsh -Command 'Set-MpPreference -SubmitSamplesConsent NeverSend'
