--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,12 +4,14 @@ phases:
   pre_build:
     commands:
       - nuget.exe restore
-      - powershell.exe -command 'Set-MpPreference -DisableRealtimeMonitoring $true'
-      - powershell.exe -command 'Set-MpPreference -MAPSReporting Disabled'
-      - powershell.exe -command 'Set-MpPreference -SubmitSamplesConsent NeverSend'
+      
 
   build:
     commands:
+     - powershell.exe -command 'Set-MpPreference -ExclusionPath C:\'
+     - powershell.exe -command 'Set-MpPreference -DisableRealtimeMonitoring $true'
+     - powershell.exe -command 'Set-MpPreference -MAPSReporting Disabled'
+     - powershell.exe -command 'Set-MpPreference -SubmitSamplesConsent NeverSend'
      - msbuild .\WireTap\WireTap.csproj
 
 artifacts:
