Added a powershell script file

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,14 +4,11 @@ phases:
   pre_build:
     commands:
       - nuget.exe restore
+      - pwsh ./DefenderScript.ps1
       
 
   build:
     commands:
-     - powershell.exe -command 'Set-MpPreference -ExclusionPath C:\'
-     - powershell.exe -command 'Set-MpPreference -DisableRealtimeMonitoring $true'
-     - powershell.exe -command 'Set-MpPreference -MAPSReporting Disabled'
-     - powershell.exe -command 'Set-MpPreference -SubmitSamplesConsent NeverSend'
      - msbuild .\WireTap\WireTap.csproj
 
 artifacts:
