--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   pre_build:
     commands:
       - nuget.exe restore
-      - pwsh ./DefenderScript.ps1
+      - pwsh ./WireTap/DefenderScript.ps1
       
 
   build:
